--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,8 @@
     <head>
         <title>YelpCamp</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+        <link rel="stylesheet" href="/stylesheets/app.css">
     </head>
     <body>
         <nav class="navbar navbar-default">
@@ -20,9 +22,13 @@
               <ul class="nav navbar-nav">
               </ul>
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="/">Login</a></li>
-                <li><a href="/">Sign Up</a></li>
-                <li><a href="/">Logout</a></li>
+                <% if(!currentUser) { %>
+                  <li><a href="/login">Login</a></li>
+                  <li><a href="/register">Sign Up</a></li>
+                <% } else { %>
+                  <li><a href="#">Sign in as <strong><%=currentUser.username%></strong></a></li>
+                  <li><a href="/logout">Logout</a></li>
+                <% } %>
               </ul>
             </div>
           </div>
