--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -14,6 +14,10 @@
                     <input class="form-control" type="text" name="campground[image]" id="image" value="<%= campground.image%>">
                   </div>
                   <div class="form-group">
+                    <label for="image">Campground Price</label>
+                    <input class="form-control" type="number" name="campground[price]" id="price" min="0.01" step="0.01" value="<%= campgrond.price%>">
+                  </div>
+                  <div class="form-group">
                     <label for="description">Campground Description</label>
                     <textarea rows="5" class="form-control" name="campgrond[description]" id="description"><%= campground.description%></textarea>
                   </div>
