--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -14,6 +14,10 @@
                     <input class="form-control" type="text" name="image" id="image" placeholder="image">
                   </div>
                   <div class="form-group">
+                    <label for="image">Campground Price</label>
+                    <input class="form-control" type="number" name="price" id="price" min="0.01" step="0.01">
+                  </div>
+                  <div class="form-group">
                     <label for="description">Campground Description</label>
                     <textarea rows="5" class="form-control" name="description" id="description" placeholder="description"></textarea>
                   </div>
