--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,7 +17,7 @@
             <div class="thumbnail">
                 <img class="img-responsive" src="<%= campground.image %>">
                 <div class="caption-full">
-                    <h4 class="pull-right">$9.00/Night</h4>
+                    <h4 class="pull-right">$<%= campground.price%>/Night</h4>
                     <h4><a href"#"><%= campground.name %></a></h1></h4>
                     <p><%= campground.description %></p>
                     <h6>Submitted by <strong><%=campground.author.username%></strong></h6>
