--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,3 +33,12 @@
             </div>
           </div>
         </nav>
+        
+        <div class="container">
+          <% if(eMessage && eMessage.length > 0) { %>
+            <div class="alert alert-danger" role="alert"><%= eMessage %></div>
+          <% } %>
+          <% if(sMessage && sMessage.length > 0) { %>
+            <div class="alert alert-success" role="alert"><%= sMessage %></div>
+          <% } %>
+        </div>
